--- a/template/package.json
+++ b/template/package.json
@@ -25,23 +25,30 @@
     "lint": "tslint src/**/*.ts",
     "process:html": "htmlprocessor src/index.html -o dist/index.html",
     "sass": "node-sass --output ./src/css ./src/sass",
-    "serve": "http-server dist/ -o",
-    "test": "cross-env NODE_ENV=development karma start karma.unit.js",
-    "test:debug": "cross-env NODE_ENV=development karma start karma.debug.js",
-    "test:watch": "cross-env NODE_ENV=development karma start karma.unit.js --singleRun=false --auto-watch"
+    "serve": "http-server dist/ -o"
+    // "test": "cross-env NODE_ENV=development karma start karma.unit.js",
+    // "test:debug": "cross-env NODE_ENV=development karma start karma.debug.js",
+    // "test:watch": "cross-env NODE_ENV=development karma start karma.unit.js --singleRun=false --auto-watch"
   },
   "dependencies": {
-    "axios": "~0.15.3",
-    "bootstrap": "~3.3.7",
+    "bulma": "0.4.2",
     "vue": "~2.2.4",
+    "vuex": "~2.3.1",
+    "bootstrap-sass": "~3.3.7",
     "vue-class-component": "~5.0.0",
     "vue-property-decorator": "~4.0.0",
-    "vue-router": "~2.3.0"
+    "vue-router": "~2.3.0",
+    "vue-resource": "~1.3.3",
+    "vue-localstorage": "~0.2.0",
+    "voo-i18n": "1.0.10",
+    "vue-authenticate": "1.2.4"
   },
   "devDependencies": {
     "@types/mocha": "~2.2.40",
     "@types/node": "~7.0.8",
     "@types/sinon": "~1.16.36",
+    "qunitjs": "~2.3.2",
+    "vorlon": "~0.5.4",
     "awesome-typescript-loader": "~3.1.2",
     "chai": "~3.5.0",
     "clean-css-cli": "~4.0.9",
@@ -56,26 +63,12 @@
     "http-server": "~0.9.0",
     "istanbul-instrumenter-loader": "~2.0.0",
     "json-loader": "~0.5.4",
-    "karma": "~1.5.0",
-    "karma-chai": "~0.1.0",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-coverage": "~1.1.1",
-    "karma-junit-reporter": "~1.2.0",
-    "karma-mocha": "~1.3.0",
-    "karma-mocha-reporter": "~2.2.2",
-    "karma-phantomjs-launcher": "~1.0.4",
-    "karma-sinon": "~1.0.5",
-    "karma-source-map-support": "~1.2.0",
-    "karma-sourcemap-loader": "~0.3.7",
-    "karma-teamcity-reporter": "~1.0.0",
-    "karma-webpack": "~2.0.3",
     "lodash.merge": "~4.6.0",
     "minimist": "~1.2.0",
     "mocha": "~3.2.0",
     "ncp": "~2.0.0",
     "node-sass": "~4.5.0",
     "opn-cli": "~3.1.0",
-    "phantomjs-prebuilt": "~2.1.14",
     "raw-loader": "~0.5.1",
     "remap-istanbul": "~0.9.1",
     "rimraf": "~2.6.1",
