updated the base project to only have a nav bar and homepage, added the base.model abstact class

--- a/template/package.json
+++ b/template/package.json
@@ -25,29 +25,28 @@
     "lint": "tslint src/**/*.ts",
     "process:html": "htmlprocessor src/index.html -o dist/index.html",
     "sass": "node-sass --output ./src/css ./src/sass",
-    "serve": "http-server dist/ -o"
+    "serve": "http-server dist/ -o",
+    "test": "node ./node_modules/qunitjs/bin/qunit"
   },
   "dependencies": {
     "bulma": "0.4.2",
+    "bootstrap-sass": "~3.3.7",
+    "voo-i18n": "1.0.10",
     "vue": "~2.2.4",
     "vuex": "~2.3.1",
-    "bootstrap-sass": "~3.3.7",
+    "vue-authenticate": "1.2.4",
     "vue-class-component": "~5.0.0",
+    "vue-localstorage": "~0.2.0",
     "vue-property-decorator": "~4.0.0",
     "vue-router": "~2.3.0",
-    "vue-resource": "~1.3.3",
-    "vue-localstorage": "~0.2.0",
-    "voo-i18n": "1.0.10",
-    "vue-authenticate": "1.2.4"
+    "vue-resource": "~1.3.3"
   },
   "devDependencies": {
-    "@types/mocha": "~2.2.40",
     "@types/node": "~7.0.8",
     "@types/sinon": "~1.16.36",
     "qunitjs": "~2.3.2",
     "vorlon": "~0.5.4",
     "awesome-typescript-loader": "~3.1.2",
-    "chai": "~3.5.0",
     "clean-css-cli": "~4.0.9",
     "compression-webpack-plugin": "~0.3.2",
     "concurrently": "~3.4.0",
@@ -62,14 +61,12 @@
     "json-loader": "~0.5.4",
     "lodash.merge": "~4.6.0",
     "minimist": "~1.2.0",
-    "mocha": "~3.2.0",
     "ncp": "~2.0.0",
     "node-sass": "~4.5.0",
     "opn-cli": "~3.1.0",
     "raw-loader": "~0.5.1",
     "remap-istanbul": "~0.9.1",
     "rimraf": "~2.6.1",
-    "sinon": "~2.1.0",
     "tslint": "~4.5.1",
     "tslint-loader": "~3.4.3",
     "typescript": "~2.2.1",
