--- a/template/package.json
+++ b/template/package.json
@@ -9,19 +9,12 @@
     "npm": ">=3"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production npm run clean && npm run test && npm run sass && npm run copy:bs && npm run build:parts && npm run clean:css && npm run process:html",
+    "build": "cross-env NODE_ENV=production npm run clean && npm run test && npm run sass && npm run build:parts && npm run clean:css && npm run process:html",
     "build:parts": "npm run sass && npm run compile",
-    "ci:teamcity": "karma --env=tc start karma.coverage.js && npm run coverage:remap",
-    "ci:jenkins": "karma --env=jk start karma.coverage.js && npm run coverage:remap",
     "clean": "rimraf dist && rimraf coverage",
-    "clean:css": "cleancss -o dist/css/main.min.css src/css/bootstrap.css src/css/main.css",
+    "clean:css": "cleancss -o dist/css/main.min.css src/css/bulma.css src/css/main.css",
     "compile": "webpack --config config/webpack.config.prod.js",
-    "copy:bs": "ncp node_modules/bootstrap/dist/css/bootstrap.css src/css/bootstrap.css",
-    "coverage": "npm run coverage:run && npm run coverage:remap && npm run coverage:open",
-    "coverage:open": "opn coverage/html-ts/index.html",
-    "coverage:remap": "remap-istanbul -i coverage/json/coverage-final.json -o coverage/html-ts -t html",
-    "coverage:run": "cross-env NODE_ENV=development karma start karma.coverage.js",
-    "dev": "cross-env NODE_ENV=development npm run sass && npm run copy:bs && concurrently --kill-others \"webpack-dev-server --hot --inline\" \"node-sass --watch --output ./src/css ./src/sass\"",
+    "dev": "cross-env NODE_ENV=development npm run sass && concurrently --kill-others \"webpack-dev-server --hot --inline\" \"node-sass --watch --output ./src/css ./src/sass\"",
     "lint": "tslint src/**/*.ts",
     "process:html": "htmlprocessor src/index.html -o dist/index.html",
     "sass": "node-sass --output ./src/css ./src/sass",
@@ -30,7 +23,6 @@
   },
   "dependencies": {
     "bulma": "0.4.2",
-    "bootstrap-sass": "~3.3.7",
     "voo-i18n": "1.0.10",
     "vue": "~2.2.4",
     "vuex": "~2.3.1",
