--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "{{ name }}",
-  "description": "{{ description }}",
+  "name": "voodoo-dashboard",
+  "description": "A technical test for Voodoo",
   "version": "1.0.0",
-  "author": "{{ author }}",
+  "author": "brice.guegan.info@gmail.com",
   "private": true,
   "engines": {
     "node": ">=6",
@@ -22,16 +22,14 @@
     "test": "node ./node_modules/qunitjs/bin/qunit"
   },
   "dependencies": {
-    "bulma": "0.4.2",
+    "axios": "~0.17.1",
+    "bulma": "^0.6.2",
     "voo-i18n": "1.0.10",
-    "vue": "~2.2.4",
-    "vuex": "~2.3.1",
-    "vue-authenticate": "1.2.4",
-    "vue-class-component": "~5.0.0",
-    "vue-localstorage": "~0.2.0",
-    "vue-property-decorator": "~4.0.0",
-    "vue-router": "~2.3.0",
-    "vue-resource": "~1.3.3"
+    "vue": "~2.5",
+    "vue-class-component": "~6.1.2",
+    "vue-property-decorator": "~6.0.0",
+    "vue-router": "~3.0.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "@types/node": "~7.0.8",
@@ -61,8 +59,9 @@
     "rimraf": "~2.6.1",
     "tslint": "~4.5.1",
     "tslint-loader": "~3.4.3",
-    "typescript": "~2.2.1",
-    "webpack": "~2.2.1",
-    "webpack-dev-server": "~2.4.2"
+    "typescript": "~2.6.2",
+    "ajv": "^5.5.2",
+    "webpack": "~3.10.0",
+    "webpack-dev-server": "~2.10.0"
   }
 }
